# rgit

./: CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: build-and-release.yml  rust.yml
src/: blob.rs  commit.rs  database.rs  diff.rs  entry.rs  index.rs  lib.rs  lockfile.rs  main.rs  refs.rs  storable.rs  tree.rs  utils.rs  workspace.rs  workspace_tree.rs
src/command/: add.rs  branch.rs  commit.rs  diff.rs  init.rs  log.rs  mod.rs  status.rs
src/commands/: init.rs  mod.rs  workspace.rs
src/database/: author.rs  blob.rs  commit.rs  database.rs  storable.rs  tree.rs
src/diff/: myres.rs
src/index/: entry.rs  index.rs  stat.rs
src/objects/: author.rs  blob.rs  commit.rs  entry.rs  index.rs  mod.rs  tree.rs
src/objects/index/: checksum.rs  index.rs
src/utils/: compress.rs  hasher.rs  mod.rs
tests/: commit.rs  init.rs
tests/command/: add.rs  branch.rs  commit.rs  diff.rs  init.rs  main.rs  setup.rs  status.rs
