[package]
name = "rgit"
description = "A git implementation in Rust"
license = "MIT OR Apache-2.0"
authors = ["Chandra Kiran G <chandrakiran.g19@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/kiran-4444/rgit"
repository = "https://github.com/kiran-4444/rgit"
keywords = ["git", "rust", "cli"]
categories = ["development-tools::version-control"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.13"
clap = { version = "4.4.16", features = ["derive"] }
colored = "2.1.0"
predicates = "3.1.0"
tempdir = "0.3.7"
