[package]
name = "r_git"
description = "A git implementation in Rust"
license = "MIT OR Apache-2.0"
authors = ["Chandra Kiran G <chandrakiran.g19@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/kiran-4444/rgit"
repository = "https://github.com/kiran-4444/rgit"
keywords = ["git", "rust", "cli"]
categories = ["development-tools::version-control"]
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
assert_cmd = "2.0.13"
chrono = "0.4.34"
clap = { version = "4.4.16", features = ["derive"] }
cloneable-file = "0.1.1"
colored = "2.1.0"
eyre = "0.6.12"
flate2 = { version = "1.0.28", features = ["zlib-ng"] }
glob = "0.3.1"
hex = "0.4.3"
itertools = "0.12.1"
predicates = "3.1.0"
sha1 = "0.10.6"
tempdir = "0.3.7"
walkdir = "2.5.0"
